Fix shopping cart overflow (#29)

--- a/src/components/ProductModal/ProductModal.scss
+++ b/src/components/ProductModal/ProductModal.scss
@@ -9,7 +9,7 @@
   max-height: calc(100% - 20px);
   left: 50%;
   overflow: scroll;
-  padding: 32px;
+  padding: 32px 16px;
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -21,6 +21,7 @@
     gap: 20px;
     max-height: calc(100% - 40px);
     max-width: calc(100% - 40px);
+    padding: 32px;
   }
 
   @include lg-up {
@@ -50,6 +51,7 @@
   &__content {
     flex-grow: 1;
     justify-content: center;
+    min-width: 250px;
 
     @include md-up {
       display: flex;
@@ -125,8 +127,13 @@
     color: $light-cornflower-blue;
     font-size: 20px;
     position: absolute;
-    right: 10px;
+    right: 16px;
     top: 10px;
+
+    @include md-up {
+      right: 32px;
+      top: 32px;
+    }
   }
 
   &__overlay {
